# outcome

./: .boostify  .ci.cmake  .clang-format  .clang-tidy  .docs.cmake  .gitignore  .gitmodules  .travis.yml  404.html  CMakeLists.txt  CTestConfig.cmake  Doxyfile  Readme.md  allocator_testing.hpp  appveyor.yml  conanfile.py  expected_future.hpp  index.html  index.json  index.xml  make_reference_docs.py  memory_transactions.hpp  release_notes.md  scaling.xlsx  send_to_wandbox.sh  sitemap.xml  spinlock.hpp  spinlock.sln  spinlock.vcxproj  timing.h  unittests.cpp  update_coveralls.sh  withgcc.sh
.github/workflows/: abi_stability.yml  documentation.yml  installability.yml  make_release.yml  unittests_freebsd.yml  unittests_freebsd.yml.disabled  unittests_linux.yml  unittests_macos.yml  unittests_windows.yml
_footer/: index.html
_header/: index.html
abi-compliance/: CMakeLists.txt  Readme.md  check-abi.sh  check-abigail.sh  check-api-abi.sh  dump-abi.sh  dump-abigail.sh  dump-api-abi.sh  v2.xml
abi-compliance/abi_dumps/Outcome/: 2.2.tar.bz2
abi-compliance/abi_dumps/Outcome/2.1/: ABI.dump  binary_only.dump
abi-compliance/abi_dumps/Outcome/2.2-gcc7-cxx14/: ABI.dump  abigail.xml  binary_only.dump
abi-compliance/abi_dumps/Outcome/2.2-gcc9-cxx17/: ABI.dump  abigail.xml  binary_only.dump
abi-compliance/src/: main.cpp
abi-stability/: index.html  index.xml
alternatives/: index.html  index.xml
alternatives/error_code/: index.html
alternatives/exceptions/: index.html
alternatives/expected/: index.html
alternatives/leaf/: index.html
alternatives/outcome/: index.html
attic/: appveyor.yml  concurrent_unordered_map.hpp  future_policy.ipp  unittests.cpp
attic/example/: expected_payload1.cpp  expected_payload2.cpp  expected_try1.cpp  expected_try2.cpp  expected_try3.cpp  find_regex_expected.cpp  io_service_expected.cpp  io_service_outcome.cpp  monad_example.cpp
attic/outcome/: outcome.hpp  revision.hpp
benchmark/: benchmark.py  results-darwin.csv  results-linux2.csv  results-win32.csv  results.v2.1.xlsx  results.xlsx  runner.cpp  timing.h
benchmark/historical/: results.v1v2.xlsx
benchmark/v2.0/: results.v2.0.xlsx
boostify/: .drone.star  .travis.yml  CMakeLists.txt  Readme.md  build.jam
boostify/.drone/: before-install.sh  empty-2ddd7570b8.sh
boostify/.github/actions/boost_clone/: action.yml
boostify/.github/actions/cmake_run/: action.yml
boostify/.github/workflows/: .ci.yml  ci.yml
boostify/doc/src/: config.toml
boostify/include/boost/: outcome.hpp
boostify/include/boost/outcome/: config.hpp  outcome.hpp  result.hpp
boostify/meta/: explicit-failures-markup.xml  libraries.json
boostify/test/: CMakeLists.txt  Jamfile.v2
categories/: index.html  index.xml
categories/assignment/: index.html  index.xml
categories/comparisons/: index.html  index.xml
categories/constructors/: index.html  index.xml
categories/converting-constructors/: index.html  index.xml
categories/copy-assignment/: index.html  index.xml
categories/copy-constructors/: index.html  index.xml
categories/default-constructors/: index.html  index.xml
categories/destructors/: index.html  index.xml
categories/disabling-constructors/: index.html  index.xml
categories/explicit-constructors/: index.html  index.xml
categories/implicit-constructors/: index.html  index.xml
categories/inplace-constructors/: index.html  index.xml
categories/modifiers/: index.html  index.xml
categories/move-assignment/: index.html  index.xml
categories/move-constructors/: index.html  index.xml
categories/observer-policies/: index.html  index.xml
categories/observers/: index.html  index.xml
categories/operators/: index.html  index.xml
categories/special/: index.html  index.xml
categories/tagged-constructors/: index.html  index.xml
changelog/: index.html  index.xml
changelog/upgrade_v21_v22/: index.html
changelog/v22/: index.html
cmake/: QuickCppLibBootstrap.cmake  headers.cmake  interface.cmake  tests.cmake  toolchain-linux-libc++.cmake
conan/: conanfile.py
conan/test_package/: CMakeLists.txt  conanfile.py  example.cpp
cpp11_or_boost_map/: atomic  boostmacros.hpp
credits/: index.html
debian/: boost-outcome.dirs  changelog  control
doc/md/: 00-mainpage.md  01-installation.md  02-quickstart.md  02-tutorialA.md  03-tutorial.md  03-tutorialB.md  04-expectedsynopsis.md  04-faq.md  04-tutorialC.md  05-advanced.md  05-faq.md  06-faq.md  06-std_expected.md  07-expectedsynopsis.md  07-faq.md  08-changelog.md  08-expectedsynopsis.md  09-acknowledgements.md  installation.md  mainpage.md
doc/presentations/: videos.txt
doc/src/: config.toml
example/: .clang-format  error_code_extended.cpp  error_code_registration.cpp  expected_example.cpp  expected_payload1.cpp  expected_payload2.cpp  expected_try1.cpp  expected_try2.cpp  expected_try3.cpp  find_regex_expected.cpp  find_regex_result.cpp  io_service_expected.cpp  io_service_outcome.cpp  monad_example.cpp  simple_example.cpp  usecase_example.cpp  usecase_example.cpp.disabled  withgcc.sh
experimental/: index.html  index.xml
faq/: index.html  index.xml
history/: index.html  index.xml
include/: expected_future.hpp  outcome.hpp  outcome.ixx  spinlock.bind.hpp  spinlock.hpp
motivation/: index.html  index.xml
recipes/: index.html  index.xml
reference/: index.html  index.xml
requirements/: index.html  index.xml
single-header/: Readme.md  basic.hpp  experimental.hpp  outcome-basic.hpp  outcome-experimental.hpp  outcome.hpp
tags/: index.html  index.xml
test/: ExpectedCopyright.txt  allocator_testing.hpp  expected-pass.cpp  expected_no_move_constructible_fail.cpp  expected_pass.cpp  expected_pass_copyright.txt  outcome.vcxproj  scaling.xlsx  single-header-test.cpp  spinlock.vcxproj  test_multiabi.cpp  timing.h  tsan.supp  unittests.cpp  unittests_noexcept.cpp  update_coveralls.sh  withgcc.sh  withmsvc.bat  withmsvc_multiabi.bat
test/link/: CMakeLists.txt
test/link/experimental-c-result/: lib.c  lib.cpp  lib.h  main.c
tutorial/: index.html  index.xml
videos/: index.html  index.xml
(+1877 files in other folders)
